--- a/Visual Studio/2D RPG Negiramen/Views/TilePalettePage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePalettePage.xaml
@@ -6,7 +6,9 @@
 
     <VerticalStackLayout>
     
-        <Image Source="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets/Doujin Circle Negiramen/Negiramen Quest/Auto Generated/Images/Tile Set/adventure_field.png"/>
+        <Image Source="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets/Doujin Circle Negiramen/Negiramen Quest/Auto Generated/Images/Tile Set/adventure_field.png"
+               WidthRequest="64"
+               HeightRequest="64"/>
         
     </VerticalStackLayout>
     
