--- a/Visual Studio/2D RPG Negiramen/Views/PopupPractice.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/PopupPractice.xaml
@@ -10,7 +10,7 @@
 <toolkit:Popup xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-               x:Class="_2D_RPG_Negiramen.Views.TilePalettePopup">
+               x:Class="_2D_RPG_Negiramen.Views.PopupPractice">
     
     <VerticalStackLayout>
         <!--
