--- a/Visual Studio/2D RPG Negiramen/Views/TilePalettePage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePalettePage.xaml
@@ -44,6 +44,7 @@
                 <GraphicsView x:Name="Canvas"
                               HorizontalOptions="Start" VerticalOptions="Start"
                               WidthRequest="40" HeightRequest="40"
+                              InputTransparent="True"
                               Drawable="{StaticResource MyCursorOnTile}"/>
             </Grid>
 
