タップ座標

--- a/Visual Studio/2D RPG Negiramen/Views/TilePalettePage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePalettePage.xaml
@@ -87,7 +87,7 @@
                         <Label Text="{Binding TappedXOnImageAsInt}" />
                         <Label Text="," />
                         <Label Text="{Binding TappedYOnImageAsInt}" />
-                        <Label Text=") on window" />
+                        <Label Text=") tapped" />
                     </HorizontalStackLayout>
 
                 </VerticalStackLayout>
