--- a/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
@@ -95,7 +95,7 @@
                 FontSize="32"
                 HorizontalOptions="Center" />
 
-            <Grid ColumnDefinitions="*,*" RowDefinitions="*,*">
+            <Grid RowDefinitions="*,*,*" ColumnDefinitions="*,*">
 
                 <Button Grid.Row="0" Grid.Column="0"
                         Text="初期設定"
@@ -116,6 +116,11 @@
                         Text="タイル・パレット表示"
                         SemanticProperties.Hint="Show tile pallette"
                         Clicked="ShowTilePalette_Clicked"/>
+
+                <Button Grid.Row="2" Grid.Column="0"
+                        Text="マップ描画ページ"
+                        SemanticProperties.Hint="Map drawing page"
+                        Clicked="Button_Clicked"/>
             </Grid>
             
             <Label Text="Welcome to .NET MAUI!"
