--- a/Visual Studio/2D RPG Negiramen/AppShell.xaml
+++ b/Visual Studio/2D RPG Negiramen/AppShell.xaml
@@ -82,4 +82,9 @@
         ContentTemplate="{DataTemplate views:MapDrawingPage}"
         Route="MapDrawingPage" />
 
+    <ShellContent
+        Title="Tile palette edit"
+        ContentTemplate="{DataTemplate views:TilePaletteEditPage}"
+        Route="TilePaletteEditPage" />
+
 </Shell>
