--- a/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
@@ -120,7 +120,12 @@
                 <Button Grid.Row="2" Grid.Column="0"
                         Text="マップ描画ページ"
                         SemanticProperties.Hint="Map drawing page"
-                        Clicked="Button_Clicked"/>
+                        Clicked="MapDrawingButton_Clicked"/>
+
+                <Button Grid.Row="2" Grid.Column="1"
+                        Text="タイル・パレット編集"
+                        SemanticProperties.Hint="Tile palette editor page"
+                        Clicked="TilePaletteEditButton_Clicked"/>
             </Grid>
             
             <Label Text="Welcome to .NET MAUI!"
