--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -18,46 +18,66 @@
                    Text="グリッド"/>
 
             <Label Grid.Row="0" Grid.Column="1"
-                   HeightRequest="16"
+                   HorizontalTextAlignment="End"
                    Text="ひだり"/>
 
             <Label Grid.Row="0" Grid.Column="2"
+                   HorizontalTextAlignment="End"
                    Text="うえ"/>
 
             <Label Grid.Row="0" Grid.Column="3"
+                   HorizontalTextAlignment="End"
                    Text="よこ"/>
 
             <Label Grid.Row="0" Grid.Column="4"
+                   HorizontalTextAlignment="End"
                    Text="たて"/>
 
             <Entry Grid.Row="1" Grid.Column="1"
+                   HorizontalTextAlignment="End"
                    Placeholder="0"
                    Text="0"
                    BackgroundColor="White"/>
 
             <Entry Grid.Row="1" Grid.Column="2"
+                   HorizontalTextAlignment="End"
                    Placeholder="0"
                    Text="0"
                    BackgroundColor="White"/>
 
             <Entry Grid.Row="1" Grid.Column="3"
+                   HorizontalTextAlignment="End"
                    Placeholder="32"
                    Text="32"
                    BackgroundColor="White"/>
 
             <Entry Grid.Row="1" Grid.Column="4"
+                   HorizontalTextAlignment="End"
                    Placeholder="32"
                    Text="32"
                    BackgroundColor="White"/>
 
         </Grid>
 
-        <VerticalStackLayout Grid.Row="1">
-            <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-        </VerticalStackLayout>
+        <Grid Grid.Row="1"
+              RowDefinitions="*" ColumnDefinitions="*">
+            
+            <Image x:Name="tileImage"
+                   Margin="4,4,0,0"
+                   WidthRequest="64" HeightRequest="64"
+                   HorizontalOptions="Start" VerticalOptions="Start"
+                   Source="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets/Doujin Circle Negiramen/Negiramen Quest/Auto Generated/Images/Tile Set/adventure_field.png">
+
+                <!--
+                <Image.GestureRecognizers>
+                    <PointerGestureRecognizer PointerMoved="PointerGestureRecognizer_PointerMoved" />
+                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
+                </Image.GestureRecognizers>
+                -->
+
+            </Image>
+            
+        </Grid>
 
         <!--
             下メニュー
@@ -72,36 +92,44 @@
                    Text="タイル"/>
 
             <Label Grid.Row="0" Grid.Column="2"
+                   HorizontalTextAlignment="End"
                    Text="ｘ"/>
 
             <Label Grid.Row="0" Grid.Column="3"
+                   HorizontalTextAlignment="End"
                    Text="ｙ"/>
 
             <Label Grid.Row="0" Grid.Column="4"
+                   HorizontalTextAlignment="End"
                    Text="よこ"/>
 
             <Label Grid.Row="0" Grid.Column="5"
+                   HorizontalTextAlignment="End"
                    Text="たて"/>
 
             <Button Grid.Row="1" Grid.Column="0"
                     Text="保存"/>
 
             <Label Grid.Row="1" Grid.Column="2"
+                   HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
                    Text="0"
                    FontSize="24"/>
 
             <Label Grid.Row="1" Grid.Column="3"
+                   HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
                    Text="0"
                    FontSize="24"/>
 
             <Label Grid.Row="1" Grid.Column="4"
+                   HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
                    Text="32"
                    FontSize="24"/>
 
             <Label Grid.Row="1" Grid.Column="5"
+                   HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
                    Text="32"
                    FontSize="24"/>
