--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="_2D_RPG_Negiramen.Views.TilePaletteEditPage"
-             Title="タイル・パレット編集">
+             x:Class="_2D_RPG_Negiramen.Views.TilePaletteEditPage">
 
+    <Shell.TitleView>
+        <HorizontalStackLayout>
+            <Label Text="タイル・パレット編集"
+                   VerticalOptions="Center"
+                   HorizontalOptions="Center"
+                   FontSize="Large"
+                   TextColor="White" />
+        </HorizontalStackLayout>
+    </Shell.TitleView>
+    
     <!--
     <ContentPage.Resources>
         <models:TileCursor x:Key="MyTileCursor" />
