--- a/Visual Studio/2D RPG Negiramen/Views/TilePalettePage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePalettePage.xaml
@@ -5,7 +5,6 @@
 -->
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:models="clr-namespace:_2D_RPG_Negiramen.Models"
              xmlns:modelsDrawing="clr-namespace:_2D_RPG_Negiramen.Models.Drawing"
              xmlns:viewModels="clr-namespace:_2D_RPG_Negiramen.ViewModels"
              x:Class="_2D_RPG_Negiramen.Views.TilePalettePage"
@@ -47,8 +46,8 @@
                               HorizontalOptions="Start" VerticalOptions="Start"
                               Margin="{Binding TileCursorPointAsMargin}"
                               WidthRequest="40" HeightRequest="40"
-                              InputTransparent="True"
-                              Drawable="{StaticResource MyTileCursor}">
+                              Drawable="{StaticResource MyTileCursor}"
+                              InputTransparent="True">
                 </GraphicsView>
             </Grid>
 
