--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -122,11 +122,13 @@
                 グリッド
                 ========
 
+                * グリッド線の太さを 2px として、 Margin の左と上は グリッド線の太さの半分 1 を引いて 3 から始める
+                * その代わり、画像サイズは縦横 2px 増やす
             -->
             <GraphicsView x:Name="Canvas"
                           HorizontalOptions="Start" VerticalOptions="Start"
-                          Margin="4,4,0,0"
-                          WidthRequest="64" HeightRequest="64"
+                          Margin="3,3,0,0"
+                          WidthRequest="66" HeightRequest="66"
                           Drawable="{StaticResource MyTileSetGrid}"
                           InputTransparent="True">
             </GraphicsView>
